--- a/index.html
+++ b/index.html
@@ -199,32 +199,28 @@
             <div class="container">
                 <h2>ESTRENAR TU NUEVO AUTO USADO ES MUY FACÍL</h2>
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-4 list-estrenar">
                         <ul>
-                            <div class="icon"></div><li>Solicitud de crédito</li>
-                            <div class="icon"></div><li>Identificación Oficial Vigente (IFE, Pasaporte, Cédula Profesional)</li>
-                            <div class="icon"></div><li>Estados de cuenta o recibos de nóminca de los últimos tres meses</li>
-                            <div class="icon"></div><li>Comprobante de domicilio no mayor a tres meses (Agua, Luz, Teléfono)</li>
+                            <div class="icon"></div><li>Eliges el auto que quieres</li>
+                            <div class="icon"></div><li>Seguro de auto de contado o financiado</li>
+                            <div class="icon"></div><li>Plazos de 12 a 48 meses</li>
+                            <div class="icon"></div><li>Autorización en 48 horas</li>
                         </ul>
                     </div>
                     <div class="col-md-4">
                         <img src="sources/images/img_carro02.png" alt="Crédito facil">
-
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 list-estrenar">
                         <ul>
-                            <div class="icon"></div><li>Solicitud de crédito</li>
-                            <div class="icon"></div><li>Identificación Oficial Vigente (IFE, Pasaporte, Cédula Profesional)</li>
-                            <div class="icon"></div><li>Estados de cuenta o recibos de nóminca de los últimos tres meses</li>
-                            <div class="icon"></div><li>Comprobante de domicilio no mayor a tres meses (Agua, Luz, Teléfono)</li>
+                            <div class="icon"></div><li>3% de comisión por apertura sobre lo que te prestamos</li>
+                            <div class="icon"></div><li>Aporte mínimo del 50% del valor del auto</li>
+                            <div class="icon"></div><li>Tasas del 1-5% mensual</li>
+                            <div class="icon"></div><li>Tu eliges a quiem comprar</li>
                         </ul>
                     </div>
                 </div>
             </div>
         </section>
-
-
-        
         <script type="text/javascript" src="js/libs/jquery.min.js"></script>
         <script type="text/javascript" src="js/libs/bootstrap.min.js"></script>
         <script type="text/javascript" src="js/libs/swiper.min.js"></script>
