--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
                         <div class="container">
                             <h2>Comprar un auto seminuevo también es estrenar</h2>
                             <h3>Crédito entre particulares</h3>
-                            <h4>Quiero mi auto usado</h4>
+                            <button>Quiero mi auto usado</button>
                         </div>
                     </div>
                     <div class="swiper-slide" style="background-image:url(sources/images/banner02.jpg)">
                         <div class="container">
                             <h2>Comprar un auto seminuevo también es estrenar</h2>
-                            <h3>Crédito entre particulares</h3>
-                            <h4>Quiero mi auto usado</h4>
+                            <h3>Ofrecemos alternativas sin comprobantes de ingreso o historial crediticio</h3>
+                            <button>Quiero mi auto usado</button>
                         </div>
                     </div>
                 </div>
@@ -239,6 +239,59 @@
 
 
         <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 credito-footer">
+                        <div class="back">
+                            <div class="logo-crea"></div>
+                            <div class="legal">
+                                <p>En Crédito Real brindamos servicios financieros que ayuden a nuestros clientes a elevar su calidad de vida dando un servicio diferenciado reforzado por la ética y reputación que nos caracteriza, ofreciendo innovación continua en nuestros productos y, sobre todo, ayudando a las personas a Rebasar sus límites.</p>
+                            </div>
+                        </div>
+                        <div class="logos">
+                            <ul>
+                                <li class="logo logo-empresa"></li>
+                                <li class="logo logo-great"></li>
+                                <li class="logo logo-social"></li>
+                                <li class="logo logo-creal"></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-md-3 legales">
+                        <h5>Legales</h5>
+                        <ul>
+                            <li>Información CNBV-CUIFE-LIC</li>
+                            <li>Condusef-Legales-Contratos</li>
+                            <li>AMDEM</li>
+                            <li>Código de Ética</li>
+                            <li>Buró de Entidades Financieras</li>
+                            <li>Aviso de Privasidad</li>
+                            <li>Contacto</li>
+                            <li>Unidad Especializada de Atención a Usuarios (UNE)</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="telefono">
+                            <div class="img-tel"></div>
+                            <div class="tel">
+                                D.F. (55) 53405208 <br>
+                                Interior 01800 1124444
+                            </div>
+                        </div>
+                        <div class="social">
+                            <ul>
+                                <li class="icn icn-facebook"></li>
+                                <li class="icn icn-twitter"></li>
+                                <li class="icn icn-youtube"></li>
+                            </ul>
+                        </div>
+                        <div class="con-buro">
+                            <div class="buro"></div>
+                            <div class="condusef"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
         </footer>
 
